@@ -1,0 +1,27 @@
+#!/usr/bin/env bash
+
+_tmstatus.sh() {
+
+    local cur prev opts
+
+    COMPREPLY=()
+
+    cur="${COMP_WORDS[COMP_CWORD]}"
+#    prev="${COMP_WORDS[COMP_CWORD - 1]}"
+
+    #
+    # list of command line options
+    #   only the autocompletion with long options is implemented: long options are more readable and quick to enter since we are
+    #   using autocompletion.
+    #
+    opts="--log --help --quick"
+
+    if [[ ${cur} == -* || ${COMP_CWORD} -eq 1 ]]; then
+        # shellcheck disable=2207
+        COMPREPLY=($(compgen -W "${opts}" -- "${cur}"))
+        return 0
+    fi
+
+}
+
+complete -F _tmstatus.sh tmstatus.sh
