@@ -1,3 +1,4 @@
+  * bash completion
 * 2023-02-07, Version 1.9.0
   * ```--quick``` option
 * 2023-02-06, Version 1.8.1
