@@ -1,5 +1,6 @@
 2023-02-07  Matteo Corti  <matteo@corti.li>
 
+        * tmstatus.sh.completion: bash completion
         * tmstatus.sh: --quick option
 
 2023-02-03  Matteo Corti  <matteo@corti.li>
